objects/chargebeeapps__Coupon__c.object
<CustomObject>
    <description>Chargebee Coupon</description>
    <fields>
        <fullName>chargebeeapps__Addon_Constraint__c</fullName>
        <label>Addon Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>SPECIFIC</fullName>
                </value>
                <value>
                    <fullName>NOT_APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Addon_Id__c</fullName>
        <label>Addon Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Apply_On__c</fullName>
        <label>Apply On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INVOICE_AMOUNT</fullName>
                </value>
                <value>
                    <fullName>EACH_SPECIFIED_ITEM</fullName>
                </value>
                <value>
                    <fullName>EACH_UNIT_OF_SPECIFIED_ITEMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Apply_Till__c</fullName>
        <description>CB Apply Till</description>
        <label>Apply Till</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Coupon_Id__c</fullName>
        <label>CB Coupon Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Chargebee coupon id</description>
        <externalId>true</externalId>
        <label>CB Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Coupons</relationshipLabel>
        <relationshipName>CB_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__ChargeBee_Modified_Time__c</fullName>
        <description>ChargeBee Modified Time</description>
        <label>ChargeBee Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Coupon_Created_At__c</fullName>
        <description>CB Coupon Created At</description>
        <label>Coupon Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Coupon_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Coupon Id</description>
        <externalId>true</externalId>
        <label>Coupon Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount_Amount__c</fullName>
        <description>Discount Amount</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount_Percentage__c</fullName>
        <description>CB Discount Percentage</description>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount_Quantity__c</fullName>
        <description>CB Discount Quantity</description>
        <label>Discount Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount_Type__c</fullName>
        <description>Discount Type</description>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__Coupon_Discount_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Duration_Month__c</fullName>
        <description>CB Duration Month</description>
        <label>Duration Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Duration_Type__c</fullName>
        <description>CB Coupon Duration Type</description>
        <label>Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__Duration_Type_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice_Name__c</fullName>
        <description>Invoice name in coupon</description>
        <inlineHelpText>Invoice name</inlineHelpText>
        <label>Invoice Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Max_Redemptions__c</fullName>
        <label>Max Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Plan_Constraint__c</fullName>
        <label>Plan Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>SPECIFIC</fullName>
                </value>
                <value>
                    <fullName>NOT_APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Redemptions__c</fullName>
        <label>Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Site__c</fullName>
        <description>Chargebee site</description>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__Coupon_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Valid_Till__c</fullName>
        <description>Valid Till</description>
        <label>Valid Till</label>
        <type>DateTime</type>
    </fields>
    <label>CB Coupon</label>
    <listViews>
        <fullName>chargebeeapps__All</fullName>
        <columns>NAME</columns>
        <columns>chargebeeapps__Discount_Type__c</columns>
        <columns>chargebeeapps__Discount_Amount__c</columns>
        <columns>chargebeeapps__Discount_Percentage__c</columns>
        <columns>chargebeeapps__Discount_Quantity__c</columns>
        <columns>chargebeeapps__Redemptions__c</columns>
        <columns>chargebeeapps__Valid_Till__c</columns>
        <columns>chargebeeapps__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>chargebeeapps__CB_Coupon</fullName>
        <columns>NAME</columns>
        <columns>chargebeeapps__Coupon_Id__c</columns>
        <columns>chargebeeapps__Discount_Type__c</columns>
        <columns>chargebeeapps__Valid_Till__c</columns>
        <columns>chargebeeapps__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>CB Coupon</label>
    </listViews>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>